@@ -7,10 +7,14 @@ import io.kestra.core.models.executions.*;
 import io.kestra.core.models.flows.Flow;
 import io.kestra.core.models.flows.State;
 import io.kestra.core.models.tasks.*;
+import io.kestra.core.models.tasks.retrys.AbstractRetry;
 import io.kestra.core.services.ConditionService;
+import io.kestra.core.services.ExecutionService;
 import io.kestra.core.services.LogService;
-import io.kestra.core.tasks.flows.Pause;
-import io.kestra.core.tasks.flows.WorkingDirectory;
+import io.kestra.core.utils.ListUtils;
+import io.kestra.plugin.core.flow.WaitFor;
+import io.kestra.plugin.core.flow.Pause;
+import io.kestra.plugin.core.flow.WorkingDirectory;
 import io.micronaut.context.ApplicationContext;
 import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
@@ -43,9 +47,12 @@ public class ExecutorService {
     private LogService logService;
 
     @Inject
-    private RunnerUtils runnerUtils;
+    private FlowInputOutput flowInputOutput;
 
     protected FlowExecutorInterface flowExecutorInterface;
+
+    @Inject
+    private ExecutionService executionService;
 
     protected FlowExecutorInterface flowExecutorInterface() {
         // bean is injected late, so we need to wait
@@ -214,6 +221,19 @@ public class ExecutorService {
             );
 
             if (endedTask.isPresent()) {
+                WorkerTaskResult workerTaskResult = endedTask.get();
+                // Compute outputs for the parent Flowable task if a terminated state was resolved
+                if (workerTaskResult.getTaskRun().getState().isTerminated()) {
+                    try {
+                        Output outputs = flowableParent.outputs(runContext);
+                        return Optional.of(new WorkerTaskResult(workerTaskResult
+                            .getTaskRun()
+                            .withOutputs(outputs != null ? outputs.toMap() : ImmutableMap.of()))
+                        );
+                    } catch (Exception e) {
+                        runContext.logger().error("Unable to resolve outputs from the Flowable task: {}", e.getMessage(), e);
+                    }
+                }
                 return endedTask;
             }
 
@@ -284,11 +304,9 @@ public class ExecutorService {
                 );
 
                 if (!nexts.isEmpty()) {
-                    return this.saveFlowableOutput(
-                        nexts,
-                        executor,
-                        parentTaskRun
-                    );
+                    return nexts.stream()
+                        .map(throwFunction(NextTaskRun::getTaskRun))
+                        .toList();
                 }
             } catch (Exception e) {
                 log.warn("Unable to resolve the next tasks to run", e);
@@ -300,8 +318,7 @@ public class ExecutorService {
 
     private List<TaskRun> saveFlowableOutput(
         List<NextTaskRun> nextTaskRuns,
-        Executor executor,
-        TaskRun parentTaskRun
+        Executor executor
     ) {
         return nextTaskRuns
             .stream()
@@ -321,7 +338,7 @@ public class ExecutorService {
                         t.getTaskRun()
                     );
 
-                    Output outputs = flowableTask.outputs(runContext, executor.getExecution(), parentTaskRun);
+                    Output outputs = flowableTask.outputs(runContext);
                     taskRun = taskRun.withOutputs(outputs != null ? outputs.toMap() : ImmutableMap.of());
                 } catch (Exception e) {
                     executor.getFlow().logger().warn("Unable to save output on taskRun '{}'", taskRun, e);
@@ -329,7 +346,7 @@ public class ExecutorService {
 
                 return taskRun;
             }))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private Executor onEnd(Executor executor) {
@@ -347,7 +364,7 @@ public class ExecutorService {
                     .collect(HashMap::new, (map, entry) -> map.put(entry.getId(), entry.getValue()), Map::putAll);
                 RunContext runContext = runContextFactory.of(executor.getFlow(), executor.getExecution());
                 outputs = runContext.render(outputs);
-                outputs = runnerUtils.typedOutputs(flow, executor.getExecution(), outputs);
+                outputs = flowInputOutput.typedOutputs(flow, executor.getExecution(), outputs);
                 newExecution = newExecution.withOutputs(outputs);
             } catch (Exception e) {
                 logService.logExecution(
@@ -399,7 +416,8 @@ public class ExecutorService {
         }
 
         return executor.withTaskRun(
-            this.saveFlowableOutput(nextTaskRuns, executor, null),
+            // TODO - saveFlowableOutput seems to be only useful for Template
+            this.saveFlowableOutput(nextTaskRuns, executor),
             "handleNext"
         );
     }
@@ -429,7 +447,7 @@ public class ExecutorService {
         return executor.withTaskRun(result, "handleChildNext");
     }
 
-    private Executor handleChildWorkerTaskResult(Executor executor) throws InternalException {
+    private Executor handleChildWorkerTaskResult(Executor executor) throws Exception {
         if (executor.getExecution().getTaskRunList() == null) {
             return executor;
         }
@@ -448,23 +466,105 @@ public class ExecutorService {
                 workerTaskResult.ifPresent(list::add);
             }
 
-            /**
+            Task task = executor.getFlow().findTaskByTaskIdOrNull(taskRun.getTaskId());
+            String taskId = taskRun.getTaskId();
+            Task parentTask = null;
+            if (taskRun.getParentTaskRunId() != null) {
+                do {
+                    parentTask = executor.getFlow().findParentTasksByTaskId(taskId);
+                    if (parentTask != null) {
+                        taskId = parentTask.getId();
+                    }
+                } while (parentTask != null && parentTask.getRetry() == null);
+            }
+
+            /*
              * Check if the task is failed and if it has a retry policy
              */
-            if (!executor.getExecution().getState().isRetrying() && taskRun.getState().isFailed() && executor.getFlow().findTaskByTaskId(taskRun.getTaskId()).getRetry() != null) {
-                Instant nextRetryDate = taskRun.nextRetryDate(executor.getFlow().findTaskByTaskId(taskRun.getTaskId()));
+            if (!executor.getExecution().getState().isRetrying() &&
+                taskRun.getState().isFailed() &&
+                task instanceof RunnableTask<?> &&
+                (task.getRetry() != null || executor.getFlow().getRetry() != null || (parentTask != null && parentTask.getRetry() != null))
+            ) {
+                Instant nextRetryDate;
+                AbstractRetry retry;
+                AbstractRetry.Behavior behavior;
+                ExecutionDelay.ExecutionDelayBuilder executionDelayBuilder = ExecutionDelay.builder()
+                    .taskRunId(taskRun.getId())
+                    .executionId(executor.getExecution().getId());
+                // Case task has a retry
+                if (task.getRetry() != null) {
+                    retry = task.getRetry();
+                    behavior = retry.getBehavior();
+                    nextRetryDate = behavior.equals(AbstractRetry.Behavior.CREATE_NEW_EXECUTION) ?
+                        taskRun.nextRetryDate(retry, executor.getExecution()) :
+                        taskRun.nextRetryDate(retry);
+                }
+                // Case parent task has a retry
+                else if (parentTask != null && parentTask.getRetry() != null) {
+                    retry = parentTask.getRetry();
+                    behavior = retry.getBehavior();
+                    nextRetryDate = behavior.equals(AbstractRetry.Behavior.CREATE_NEW_EXECUTION) ?
+                        taskRun.nextRetryDate(retry, executor.getExecution()) :
+                        taskRun.nextRetryDate(retry);
+                }
+                // Case flow has a retry
+                else {
+                    retry = executor.getFlow().getRetry();
+                    behavior = retry.getBehavior();
+                    nextRetryDate = behavior.equals(AbstractRetry.Behavior.CREATE_NEW_EXECUTION) ?
+                        executionService.nextRetryDate(retry, executor.getExecution()) :
+                        taskRun.nextRetryDate(retry);
+                }
                 if (nextRetryDate != null) {
-                    executionDelays.add(
-                        ExecutionDelay.builder()
+                    executionDelayBuilder
+                        .date(nextRetryDate)
+                        .state(State.Type.RUNNING)
+                        .delayType(behavior.equals(AbstractRetry.Behavior.CREATE_NEW_EXECUTION) ?
+                            ExecutionDelay.DelayType.RESTART_FAILED_FLOW :
+                            ExecutionDelay.DelayType.RESTART_FAILED_TASK);
+                    executionDelays.add(executionDelayBuilder.build());
+                    executor.withExecution(behavior.equals(AbstractRetry.Behavior.CREATE_NEW_EXECUTION) ?
+                            executionService.markWithTaskRunAs(executor.getExecution(), taskRun.getId(), State.Type.RETRIED, true) :
+                            executionService.markWithTaskRunAs(executor.getExecution(), taskRun.getId(), State.Type.RETRYING, false),
+                        "handleRetryTask");
+                    // Prevent workerTaskResult of flowable to be sent
+                    // because one of its children is retrying
+                    if (taskRun.getParentTaskRunId() != null) {
+                        list = list.stream().filter(workerTaskResult -> !workerTaskResult.getTaskRun().getId().equals(taskRun.getParentTaskRunId())).toList();
+                    }
+                }
+            }
+            // WaitFor case
+            else if (task instanceof WaitFor waitFor && taskRun.getState().isRunning()) {
+                if (waitFor.childTaskRunExecuted(executor.getExecution(), taskRun)) {
+                    Output newOutput = waitFor.outputs(taskRun);
+                    TaskRun updatedTaskRun = taskRun.withOutputs(newOutput.toMap());
+                    RunContext runContext = runContextFactory.of(executor.getFlow(), task, executor.getExecution().withTaskRun(updatedTaskRun), updatedTaskRun);
+                    List<NextTaskRun> next = ((FlowableTask<?>) task).resolveNexts(runContext, executor.getExecution(), updatedTaskRun);
+                    Instant nextDate = waitFor.nextExecutionDate(runContext, executor.getExecution(), updatedTaskRun);
+                    if (next.isEmpty()) {
+                        return executor;
+                    } else if (nextDate != null) {
+                        executionDelays.add(ExecutionDelay.builder()
                             .taskRunId(taskRun.getId())
                             .executionId(executor.getExecution().getId())
-                            .date(nextRetryDate)
+                            .date(nextDate)
                             .state(State.Type.RUNNING)
-                            .build()
-                    );
-                    executor.withExecution(executor.getExecution().withState(State.Type.RETRYING), "handleRetryTask");
-
+                            .delayType(ExecutionDelay.DelayType.CONTINUE_FLOWABLE)
+                            .build());
+                        Execution execution = executionService.pauseFlowable(executor.getExecution(), updatedTaskRun);
+                        executor.withExecution(execution, "pauseLoop");
+                    } else {
+                        executor.withExecution(executor.getExecution().withTaskRun(updatedTaskRun), "handleWaitFor");
+                    }
                 }
+            }
+
+            // If the task is retrying
+            // make sure that the workerTaskResult of the parent task is not sent
+            if (taskRun.getState().isRetrying() && taskRun.getParentTaskRunId() != null) {
+                list = list.stream().filter(workerTaskResult -> !workerTaskResult.getTaskRun().getId().equals(taskRun.getParentTaskRunId())).toList();
             }
         }
 
@@ -499,6 +599,7 @@ public class ExecutorService {
                             .executionId(executor.getExecution().getId())
                             .date(workerTaskResult.getTaskRun().getState().maxDate().plus(pauseTask.getDelay() != null ? pauseTask.getDelay() : pauseTask.getTimeout()))
                             .state(pauseTask.getDelay() != null ? State.Type.RUNNING : State.Type.FAILED)
+                            .delayType(ExecutionDelay.DelayType.RESUME_FLOW)
                             .build();
                     }
                 }
@@ -506,7 +607,7 @@ public class ExecutorService {
                 return null;
             }))
             .filter(Objects::nonNull)
-            .collect(Collectors.toList());
+            .toList();
 
         if (executor.getExecution().getState().getCurrent() != State.Type.PAUSED) {
             return executor
@@ -532,11 +633,10 @@ public class ExecutorService {
             ))
             .filter(Optional::isPresent)
             .map(Optional::get)
-            .collect(Collectors.toList());
+            .toList();
 
         return executor.withWorkerTaskResults(workerTaskResults, "handleChildWorkerCreatedKilling");
     }
-
 
     private Executor handleListeners(Executor executor) {
         if (!executor.getExecution().getState().isTerminated()) {
@@ -545,14 +645,10 @@ public class ExecutorService {
 
         List<ResolvedTask> currentTasks = conditionService.findValidListeners(executor.getFlow(), executor.getExecution());
 
-        List<TaskRun> nexts = this.saveFlowableOutput(
-            FlowableUtils.resolveSequentialNexts(
-                executor.getExecution(),
-                currentTasks
-            ),
-            executor,
-            null
-        );
+        List<TaskRun> nexts = FlowableUtils.resolveSequentialNexts(executor.getExecution(), currentTasks)
+            .stream()
+            .map(throwFunction(NextTaskRun::getTaskRun))
+            .toList();
 
         if (nexts.isEmpty()) {
             return executor;
@@ -577,7 +673,6 @@ public class ExecutorService {
 
         return this.onEnd(executor);
     }
-
 
     private Executor handleRestart(Executor executor) {
         if (executor.getExecution().getState().getCurrent() != State.Type.RESTARTED) {
@@ -608,7 +703,6 @@ public class ExecutorService {
         return executor.withExecution(newExecution, "handleKilling");
     }
 
-
     private Executor handleWorkerTask(Executor executor) throws InternalException {
         if (executor.getExecution().getTaskRunList() == null || executor.getExecution().getState().getCurrent() == State.Type.KILLING) {
             return executor;
@@ -628,7 +722,7 @@ public class ExecutorService {
                     .task(task)
                     .build();
             }))
-            .collect(Collectors.toList());
+            .toList();
 
         if (workerTasks.isEmpty()) {
             return executor;
@@ -768,7 +862,7 @@ public class ExecutorService {
         ArrayList<TaskRun> taskRuns = new ArrayList<>(execution.getTaskRunList());
 
         // declared dynamic tasks
-        if (workerTaskResult.getDynamicTaskRuns() != null) {
+        if (!ListUtils.isEmpty(workerTaskResult.getDynamicTaskRuns())) {
             taskRuns.addAll(workerTaskResult.getDynamicTaskRuns());
         }
 
@@ -863,7 +957,7 @@ public class ExecutorService {
         );
     }
 
-    public void log(Logger log, Boolean in, ExecutionKilled value) {
+    public void log(Logger log, Boolean in, ExecutionKilledExecution value) {
         log.debug(
             "{} {} [key='{}']\n{}",
             in ? "<< IN " : ">> OUT",
