@@ -3,28 +3,30 @@ package io.kestra.core.services;
 import io.kestra.core.events.CrudEvent;
 import io.kestra.core.events.CrudEventType;
 import io.kestra.core.exceptions.InternalException;
-import io.kestra.core.models.executions.Execution;
-import io.kestra.core.models.executions.ExecutionKilled;
-import io.kestra.core.models.executions.TaskRun;
-import io.kestra.core.models.executions.TaskRunAttempt;
+import io.kestra.core.models.executions.*;
 import io.kestra.core.models.flows.Flow;
 import io.kestra.core.models.flows.State;
 import io.kestra.core.models.hierarchies.AbstractGraphTask;
 import io.kestra.core.models.hierarchies.GraphCluster;
 import io.kestra.core.models.tasks.Task;
+import io.kestra.core.models.tasks.retrys.AbstractRetry;
 import io.kestra.core.queues.QueueFactoryInterface;
 import io.kestra.core.queues.QueueInterface;
 import io.kestra.core.repositories.ExecutionRepositoryInterface;
 import io.kestra.core.repositories.FlowRepositoryInterface;
 import io.kestra.core.repositories.LogRepositoryInterface;
 import io.kestra.core.repositories.MetricRepositoryInterface;
+import io.kestra.core.runners.FlowInputOutput;
 import io.kestra.core.storages.StorageContext;
 import io.kestra.core.storages.StorageInterface;
-import io.kestra.core.tasks.flows.WorkingDirectory;
+import io.kestra.plugin.core.flow.Pause;
+import io.kestra.plugin.core.flow.WorkingDirectory;
 import io.kestra.core.utils.GraphUtils;
 import io.kestra.core.utils.IdUtils;
 import io.micronaut.context.event.ApplicationEventPublisher;
 import io.micronaut.core.annotation.Nullable;
+import io.micronaut.http.multipart.CompletedPart;
+import io.micronaut.http.multipart.StreamingFileUpload;
 import jakarta.inject.Inject;
 import jakarta.inject.Named;
 import jakarta.inject.Singleton;
@@ -32,10 +34,12 @@ import lombok.Builder;
 import lombok.Getter;
 import lombok.experimental.SuperBuilder;
 import lombok.extern.slf4j.Slf4j;
+import org.reactivestreams.Publisher;
 import reactor.core.publisher.Flux;
 
 import java.io.IOException;
 import java.net.URI;
+import java.time.Instant;
 import java.time.ZonedDateTime;
 import java.util.*;
 import java.util.function.Predicate;
@@ -69,13 +73,16 @@ public class ExecutionService {
     protected QueueInterface<Execution> executionQueue;
 
     @Inject
+    private FlowInputOutput flowInputOutput;
+
+    @Inject
     private ApplicationEventPublisher<CrudEvent<Execution>> eventPublisher;
 
     /**
-    * Retry set the given taskRun in created state
-    * and return the execution in running state
-    **/
-     public Execution retry(Execution execution, String taskRunId) {
+     * Retry set the given taskRun in created state
+     * and return the execution in running state
+     **/
+    public Execution retryTask(Execution execution, String taskRunId) {
         List<TaskRun> newTaskRuns = execution
             .getTaskRunList()
             .stream()
@@ -92,6 +99,40 @@ public class ExecutionService {
         return execution.withTaskRunList(newTaskRuns).withState(State.Type.RUNNING);
     }
 
+    public Execution retryWaitFor(Execution execution, String flowableTaskRunId) {
+        List<TaskRun> newTaskRuns = execution
+            .getTaskRunList()
+            .stream()
+            .map(taskRun -> {
+                if (taskRun.getId().equals(flowableTaskRunId)) {
+                    // Keep only CREATED/RUNNING
+                    // To avoid having large history
+                    return taskRun.replaceState(
+                         new State(
+                            State.Type.RUNNING,
+                            taskRun.getState().getHistories().subList(0,2)
+                        )
+                    );
+                }
+
+                if (flowableTaskRunId.equals(taskRun.getParentTaskRunId())) {
+                    // Clean attempts and only increment iteration
+                    // to avoid having large history
+                    return taskRun.resetAttempts().incrementIteration();
+                }
+
+                return taskRun;
+            })
+            .toList();
+
+        return execution.withTaskRunList(newTaskRuns).withState(State.Type.RUNNING);
+    }
+
+    public Execution pauseFlowable(Execution execution, TaskRun updateFlowableTaskRun) throws InternalException {
+
+        return execution.withTaskRun(updateFlowableTaskRun.withState(State.Type.PAUSED)).withState(State.Type.PAUSED);
+    }
+
     public Execution restart(final Execution execution, @Nullable Integer revision) throws Exception {
         if (!(execution.getState().isTerminated() || execution.getState().isPaused())) {
             throw new IllegalStateException("Execution must be terminated to be restarted, " +
@@ -99,7 +140,7 @@ public class ExecutionService {
             );
         }
 
-        final Flow flow = flowRepositoryInterface.findByExecution(execution);
+        final Flow flow = flowRepositoryInterface.findByExecutionWithoutAcl(execution);
 
         Set<String> taskRunToRestart = this.taskRunToRestart(
             execution,
@@ -120,7 +161,7 @@ public class ExecutionService {
                 State.Type.RESTARTED,
                 taskRunToRestart.contains(originalTaskRun.getId()))
             ))
-            .collect(Collectors.toList());
+            .collect(Collectors.toCollection(ArrayList::new));
 
         // Worker task, we need to remove all child in order to be restarted
         this.removeWorkerTask(flow, execution, taskRunToRestart, mappingTaskRunId)
@@ -139,6 +180,8 @@ public class ExecutionService {
                 execution.withState(State.Type.RESTARTED).getState()
             );
 
+        newExecution = newExecution.withMetadata(execution.getMetadata().nextAttempt());
+
         return revision != null ? newExecution.withFlowRevision(revision) : newExecution;
     }
 
@@ -151,7 +194,7 @@ public class ExecutionService {
                     .getTaskRunList()
                     .stream()
                     .filter(predicate)
-                    .collect(Collectors.toList())
+                    .toList()
             );
 
         if (finalTaskRunToRestart.size() == 0) {
@@ -164,8 +207,8 @@ public class ExecutionService {
     public Execution replay(final Execution execution, @Nullable String taskRunId, @Nullable Integer revision) throws Exception {
         final String newExecutionId = IdUtils.create();
         List<TaskRun> newTaskRuns = new ArrayList<>();
-        if(taskRunId != null){
-            final Flow flow = flowRepositoryInterface.findByExecution(execution);
+        if (taskRunId != null) {
+            final Flow flow = flowRepositoryInterface.findByExecutionWithoutAcl(execution);
 
             GraphCluster graphCluster = GraphUtils.of(flow, execution);
 
@@ -178,16 +221,16 @@ public class ExecutionService {
 
             newTaskRuns.addAll(
                 execution.getTaskRunList()
-                .stream()
-                .map(throwFunction(originalTaskRun -> this.mapTaskRun(
-                    flow,
-                    originalTaskRun,
-                    mappingTaskRunId,
-                    newExecutionId,
-                    State.Type.RESTARTED,
-                    taskRunToRestart.contains(originalTaskRun.getId()))
-                ))
-                .collect(Collectors.toList())
+                    .stream()
+                    .map(throwFunction(originalTaskRun -> this.mapTaskRun(
+                        flow,
+                        originalTaskRun,
+                        mappingTaskRunId,
+                        newExecutionId,
+                        State.Type.RESTARTED,
+                        taskRunToRestart.contains(originalTaskRun.getId()))
+                    ))
+                    .toList()
             );
 
             // remove all child for replay task id
@@ -216,12 +259,17 @@ public class ExecutionService {
             taskRunId == null ? new State() : execution.withState(State.Type.RESTARTED).getState()
         );
 
+        newExecution = newExecution.withMetadata(execution.getMetadata().nextAttempt());
+
         return revision != null ? newExecution.withFlowRevision(revision) : newExecution;
     }
 
-    public Execution markAs(final Execution execution, String taskRunId, State.Type newState) throws Exception {
-        final Flow flow = flowRepositoryInterface.findByExecution(execution);
+    public Execution markAs(final Execution execution, Flow flow, String taskRunId, State.Type newState) throws Exception {
+        return this.markAs(execution, flow, taskRunId, newState, null);
+    }
 
+    @SuppressWarnings("deprecation")
+    private Execution markAs(final Execution execution, Flow flow, String taskRunId, State.Type newState, @Nullable Map<String, Object> onResumeInputs) throws Exception {
         Set<String> taskRunToRestart = this.taskRunToRestart(
             execution,
             taskRun -> taskRun.getId().equals(taskRunId)
@@ -231,10 +279,19 @@ public class ExecutionService {
 
         for (String s : taskRunToRestart) {
             TaskRun originalTaskRun = newExecution.findTaskRunByTaskRunId(s);
-            boolean isFlowable = flow.findTaskByTaskId(originalTaskRun.getTaskId()).isFlowable();
+            Task task = flow.findTaskByTaskId(originalTaskRun.getTaskId());
+            boolean isFlowable = task.isFlowable();
 
             if (!isFlowable || s.equals(taskRunId)) {
                 TaskRun newTaskRun = originalTaskRun.withState(newState);
+
+                if (task instanceof Pause pauseTask && pauseTask.getOnResume() != null) {
+                    newTaskRun = newTaskRun.withOutputs(pauseTask.generateOutputs(onResumeInputs));
+                }
+
+                if (task instanceof Pause pauseTask && pauseTask.getTasks() == null && newState == State.Type.RUNNING) {
+                    newTaskRun = newTaskRun.withState(State.Type.SUCCESS);
+                }
 
                 if (originalTaskRun.getAttempts() != null && !originalTaskRun.getAttempts().isEmpty()) {
                     ArrayList<TaskRunAttempt> attempts = new ArrayList<>(originalTaskRun.getAttempts());
@@ -248,13 +305,23 @@ public class ExecutionService {
             }
         }
 
-
         if (newExecution.getTaskRunList().stream().anyMatch(t -> t.getState().getCurrent() == State.Type.PAUSED)) {
             // there is still some tasks paused, this can occur with parallel pause
             return newExecution;
         }
         return newExecution
             .withState(State.Type.RESTARTED);
+    }
+
+    public Execution markWithTaskRunAs(final Execution execution, String taskRunId, State.Type newState, Boolean markParents) throws Exception {
+        TaskRun taskRun = execution.findTaskRunByTaskRunId(taskRunId);
+        Execution updatedExecution = execution.withTaskRun(taskRun.withState(newState));
+
+        if (markParents && taskRun.getParentTaskRunId() != null) {
+            return this.markWithTaskRunAs(updatedExecution, taskRun.getParentTaskRunId(), newState, true);
+        }
+
+        return updatedExecution.withState(newState);
     }
 
     public PurgeResult purge(
@@ -265,6 +332,7 @@ public class ExecutionService {
         @Nullable String tenantId,
         @Nullable String namespace,
         @Nullable String flowId,
+        @Nullable ZonedDateTime startDate,
         @Nullable ZonedDateTime endDate,
         @Nullable List<State.Type> state
     ) throws IOException {
@@ -274,12 +342,13 @@ public class ExecutionService {
                 tenantId,
                 namespace,
                 flowId,
-                null,
+                startDate,
                 endDate,
                 state,
                 null,
                 null,
-                null
+                null,
+                true
             )
             .map(throwFunction(execution -> {
                 PurgeResult.PurgeResultBuilder<?, ?> builder = PurgeResult.builder();
@@ -292,8 +361,8 @@ public class ExecutionService {
                     builder.logsCount(this.logRepository.purge(execution));
                 }
 
-                if(purgeMetric) {
-                    this.metricRepository.purge(execution);
+                if (purgeMetric) {
+                    builder.metricsCount(this.metricRepository.purge(execution));
                 }
 
                 if (purgeStorage) {
@@ -308,6 +377,7 @@ public class ExecutionService {
                 .executionsCount(a.getExecutionsCount() + b.getExecutionsCount())
                 .logsCount(a.getLogsCount() + b.getLogsCount())
                 .storagesCount(a.getStoragesCount() + b.getStoragesCount())
+                .metricsCount(a.getMetricsCount() + b.getMetricsCount())
                 .build()
             )
             .block();
@@ -325,21 +395,62 @@ public class ExecutionService {
      *
      * @param execution the execution to resume
      * @param newState  should be RUNNING or KILLING, other states may lead to undefined behaviour
+     * @param flow      the flow of the execution
      * @return the execution in the new state.
-     * @throws InternalException if the state of the execution cannot be updated
+     * @throws Exception if the state of the execution cannot be updated
      */
-    public Execution resume(Execution execution, State.Type newState) throws InternalException {
+    public Execution resume(Execution execution, Flow flow, State.Type newState) throws Exception {
+        return this.resume(execution, flow, newState, (Map<String, Object>) null);
+    }
+
+    /**
+     * Resume a paused execution to a new state.
+     * The execution must be paused or this call will be a no-op.
+     *
+     * @param execution the execution to resume
+     * @param newState  should be RUNNING or KILLING, other states may lead to undefined behavior
+     * @param flow      the flow of the execution
+     * @param inputs    the onResume inputs
+     * @return the execution in the new state.
+     * @throws Exception if the state of the execution cannot be updated
+     */
+    public Execution resume(final Execution execution, Flow flow, State.Type newState, @Nullable Publisher<CompletedPart> inputs) throws Exception {
         var runningTaskRun = execution
             .findFirstByState(State.Type.PAUSED)
-            .map(taskRun ->
-                taskRun.withState(newState)
-            )
             .orElseThrow(() -> new IllegalArgumentException("No paused task found on execution " + execution.getId()));
 
-        var unpausedExecution = execution
-            .withTaskRun(runningTaskRun)
-            .withState(newState);
-        this.eventPublisher.publishEvent(new CrudEvent<>(execution, CrudEventType.UPDATE));
+        var task = flow.findTaskByTaskId(runningTaskRun.getTaskId());
+        Map<String, Object> pauseOutputs = Collections.emptyMap();
+        if (task instanceof Pause pauseTask) {
+            pauseOutputs = flowInputOutput.typedInputs(
+                pauseTask.getOnResume(),
+                execution,
+                inputs
+            );
+        }
+
+        return resume(execution, flow, newState, pauseOutputs);
+    }
+
+    /**
+     * Resume a paused execution to a new state.
+     * The execution must be paused or this call will be a no-op.
+     *
+     * @param execution the execution to resume
+     * @param newState  should be RUNNING or KILLING, other states may lead to undefined behavior
+     * @param flow      the flow of the execution
+     * @param inputs    the onResume inputs
+     * @return the execution in the new state.
+     * @throws Exception if the state of the execution cannot be updated
+     */
+    public Execution resume(final Execution execution, Flow flow, State.Type newState, @Nullable Map<String, Object> inputs) throws Exception {
+        var runningTaskRun = execution
+            .findFirstByState(State.Type.PAUSED)
+            .orElseThrow(() -> new IllegalArgumentException("No paused task found on execution " + execution.getId()));
+
+        var unpausedExecution = this.markAs(execution, flow, runningTaskRun.getId(), newState, inputs);
+
+        this.eventPublisher.publishEvent(new CrudEvent<>(unpausedExecution, execution, CrudEventType.UPDATE));
         return unpausedExecution;
     }
 
@@ -347,11 +458,11 @@ public class ExecutionService {
      * Lookup for all executions triggered by given execution id, and returns all the relevant
      * {@link ExecutionKilled events} that should be requested. This method is not responsible for executing the events.
      *
-     * @param tenantId      of the parent execution.
-     * @param executionId   of the parent execution.
-     * @return  a {@link Flux} of zero or more {@link ExecutionKilled}.
+     * @param tenantId    of the parent execution.
+     * @param executionId of the parent execution.
+     * @return a {@link Flux} of zero or more {@link ExecutionKilled}.
      */
-    public Flux<ExecutionKilled> killSubflowExecutions(final String tenantId, final String executionId) {
+    public Flux<ExecutionKilledExecution> killSubflowExecutions(final String tenantId, final String executionId) {
         // Lookup for all executions triggered by the current execution being killed.
         Flux<Execution> executions = executionRepository.findAllByTriggerExecutionId(
             tenantId,
@@ -366,11 +477,12 @@ public class ExecutionService {
                 State state = childExecution.getState();
                 return state.getCurrent() != State.Type.KILLING && state.getCurrent() != State.Type.KILLED;
             })
-            .map(childExecution -> ExecutionKilled
+            .map(childExecution -> ExecutionKilledExecution
                 .builder()
                 .executionId(childExecution.getId())
                 .isOnKillCascade(true)
                 .state(ExecutionKilled.State.REQUESTED) // Event will be reentrant in the Executor.
+                .tenantId(tenantId)
                 .build()
             );
     }
@@ -380,13 +492,13 @@ public class ExecutionService {
      *
      * @return the execution in a KILLING state if not already terminated
      */
-    public Execution kill(Execution execution) {
+    public Execution kill(Execution execution, Flow flow) {
         if (execution.getState().isPaused()) {
             // Must be resumed and killed, no need to send killing event to the worker as the execution is not executing anything in it.
             // An edge case can exist where the execution is resumed automatically before we resume it with a killing.
             try {
-                return this.resume(execution, State.Type.KILLING);
-            } catch (InternalException e) {
+                return this.resume(execution, flow, State.Type.KILLING);
+            } catch (Exception e) {
                 // if we cannot resume, we set it anyway to killing, so we don't throw
                 log.warn("Unable to resume a paused execution before killing it", e);
             }
@@ -425,6 +537,9 @@ public class ExecutionService {
 
         @Builder.Default
         private int storagesCount = 0;
+
+        @Builder.Default
+        private int metricsCount = 0;
     }
 
     private Set<String> removeWorkerTask(Flow flow, Execution execution, Set<String> taskRunToRestart, Map<String, String> mappingTaskRunId) throws InternalException {
@@ -453,7 +568,7 @@ public class ExecutionService {
         return Stream
             .concat(
                 execution
-                    .findChilds(taskRun)
+                    .findParents(taskRun)
                     .stream(),
                 Stream.of(taskRun)
             )
@@ -486,8 +601,7 @@ public class ExecutionService {
         if (!task.isFlowable() || task instanceof WorkingDirectory) {
             // The current task run is the reference task run, its default state will be newState
             alterState = originalTaskRun.withState(newStateType).getState();
-        }
-        else {
+        } else {
             // The current task run is an ascendant of the reference task run
             alterState = originalTaskRun.withState(State.Type.RUNNING).getState();
         }
@@ -505,5 +619,30 @@ public class ExecutionService {
             .stream()
             .flatMap(throwFunction(taskRun -> this.getAncestors(execution, taskRun).stream()))
             .collect(Collectors.toSet());
+    }
+
+    /**
+     * This method is used to retrieve previous existing execution
+     *
+     * @param retry     The retry define in the flow of the failed execution
+     * @param execution The failed execution
+     * @return The next retry date, null if maxAttempt || maxDuration is reached
+     */
+    public Instant nextRetryDate(AbstractRetry retry, Execution execution) {
+        if (retry.getMaxAttempt() != null && execution.getMetadata().getAttemptNumber() >= retry.getMaxAttempt()) {
+
+            return null;
+        }
+
+        Instant base = execution.getState().maxDate();
+        Instant originalCreatedDate = execution.getMetadata().getOriginalCreatedDate();
+        Instant nextDate = retry.nextRetryDate(execution.getMetadata().getAttemptNumber(), base);
+
+        if (retry.getMaxDuration() != null && nextDate.isAfter(originalCreatedDate.plus(retry.getMaxDuration()))) {
+
+            return null;
+        }
+
+        return nextDate;
     }
 }
